--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bfe0abd6",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,6 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from xgboost import XGBRegressor\n",
     "import joblib\n",
-    "import os\n",
     "import pandas as pd\n",
     "from taxipred.utils.constants import get_clean_data\n",
     "from Cleaning_functions import split_features_target\n",
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a2eafa77",
    "metadata": {},
    "outputs": [],
@@ -361,7 +360,7 @@
     "    {\"name\": \"lasso\", \"model\": Lasso(), \"scale\": True},\n",
     "    {\"name\": \"knn\", \"model\": KNeighborsRegressor(), \"scale\": True},\n",
     "    {\"name\": \"svr\", \"model\": SVR(), \"scale\": True},\n",
-    "    {\"name\": \"mlp\", \"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True},\n",
+    "    #{\"name\": \"mlp\", \"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True}, # commented for time resource management\n",
     "    {\"name\": \"xgb\", \"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
     "    {\"name\": \"rf\", \"model\": RandomForestRegressor(random_state=42), \"scale\": False},\n",
     "])"
@@ -583,7 +582,7 @@
    "source": [
     "###  result \n",
     "\n",
-    "opted for XGBoost despite SVR (too complex) and MLP (Slow and resource heavy) scored higher"
+    "opted for XGBoost (might revisit SVR depending on time left till deadline) despite SVR (based on complexity) and MLP (Slow and resource demanding) scored higher"
    ]
   },
   {
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "170c1e4b",
    "metadata": {},
    "outputs": [
@@ -1680,7 +1679,7 @@
     }
    ],
    "source": [
-    "xgb_model.fit(X_train, y_train)"
+    "xgb_model.fit(X_train, y_train) # move to function?"
    ]
   },
   {
