--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -210,13 +210,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "id": "dd3dbaa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Trip_Distance_km       1000 non-null   float64\n",
+      " 1   Passenger_Count        1000 non-null   float64\n",
+      " 2   Base_Fare              1000 non-null   float64\n",
+      " 3   Per_Km_Rate            1000 non-null   float64\n",
+      " 4   Per_Minute_Rate        1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes  1000 non-null   float64\n",
+      "dtypes: float64(6)\n",
+      "memory usage: 47.0 KB\n"
+     ]
+    }
+   ],
    "source": [
     "df_filled_target = fillna_mean_median(df_clipped_target)\n",
-    "df_filled_numeric = fillna_mean_median(df_clipped_numeric) "
+    "df_filled_numeric = fillna_mean_median(df_clipped_numeric) \n",
+    "df_filled_numeric.info()"
    ]
   },
   {
@@ -229,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -247,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -292,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -305,12 +326,12 @@
       "Data columns (total 18 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
-      " 0   Trip_Distance_km           950 non-null    float64\n",
-      " 1   Passenger_Count            950 non-null    float64\n",
-      " 2   Base_Fare                  950 non-null    float64\n",
-      " 3   Per_Km_Rate                950 non-null    float64\n",
-      " 4   Per_Minute_Rate            950 non-null    float64\n",
-      " 5   Trip_Duration_Minutes      950 non-null    float64\n",
+      " 0   Trip_Distance_km           1000 non-null   float64\n",
+      " 1   Passenger_Count            1000 non-null   float64\n",
+      " 2   Base_Fare                  1000 non-null   float64\n",
+      " 3   Per_Km_Rate                1000 non-null   float64\n",
+      " 4   Per_Minute_Rate            1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes      1000 non-null   float64\n",
       " 6   Time_of_Day_Afternoon      1000 non-null   bool   \n",
       " 7   Time_of_Day_Evening        1000 non-null   bool   \n",
       " 8   Time_of_Day_Morning        1000 non-null   bool   \n",
@@ -329,7 +350,7 @@
     }
    ],
    "source": [
-    "df_clean = pd.concat([df_clipped_numeric, dummy_categoric_features], axis=1)\n",
+    "df_clean = pd.concat([df_filled_numeric, dummy_categoric_features], axis=1)\n",
     "\n",
     "df_clean.info()"
    ]
@@ -344,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [
@@ -357,12 +378,12 @@
       "Data columns (total 19 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
-      " 0   Trip_Distance_km           950 non-null    float64\n",
-      " 1   Passenger_Count            950 non-null    float64\n",
-      " 2   Base_Fare                  950 non-null    float64\n",
-      " 3   Per_Km_Rate                950 non-null    float64\n",
-      " 4   Per_Minute_Rate            950 non-null    float64\n",
-      " 5   Trip_Duration_Minutes      950 non-null    float64\n",
+      " 0   Trip_Distance_km           1000 non-null   float64\n",
+      " 1   Passenger_Count            1000 non-null   float64\n",
+      " 2   Base_Fare                  1000 non-null   float64\n",
+      " 3   Per_Km_Rate                1000 non-null   float64\n",
+      " 4   Per_Minute_Rate            1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes      1000 non-null   float64\n",
       " 6   Time_of_Day_Afternoon      1000 non-null   bool   \n",
       " 7   Time_of_Day_Evening        1000 non-null   bool   \n",
       " 8   Time_of_Day_Morning        1000 non-null   bool   \n",
@@ -396,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -406,14 +427,14 @@
      "text": [
       "                           Trip_Price\n",
       "Trip_Price                   1.000000\n",
-      "Trip_Distance_km             0.735285\n",
-      "Per_Km_Rate                  0.390570\n",
-      "Trip_Duration_Minutes        0.325427\n",
-      "Per_Minute_Rate              0.232643\n",
+      "Trip_Distance_km             0.719568\n",
+      "Per_Km_Rate                  0.381859\n",
+      "Trip_Duration_Minutes        0.318678\n",
+      "Per_Minute_Rate              0.226293\n",
       "Traffic_Conditions_High      0.059150\n",
-      "Base_Fare                    0.047286\n",
+      "Base_Fare                    0.046055\n",
       "Weather_Rain                 0.026548\n",
-      "Passenger_Count              0.020611\n",
+      "Passenger_Count              0.020573\n",
       "Day_of_Week_Weekday          0.020459\n",
       "Weather_Snow                 0.019309\n",
       "Time_of_Day_Evening          0.005622\n",
@@ -444,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [
@@ -454,22 +475,24 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 13 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   Trip_Distance_km         950 non-null    float64\n",
-      " 1   Base_Fare                950 non-null    float64\n",
-      " 2   Per_Km_Rate              950 non-null    float64\n",
-      " 3   Per_Minute_Rate          950 non-null    float64\n",
-      " 4   Trip_Duration_Minutes    950 non-null    float64\n",
-      " 5   Time_of_Day_Afternoon    1000 non-null   bool   \n",
-      " 6   Day_of_Week_Weekday      1000 non-null   bool   \n",
-      " 7   Traffic_Conditions_High  1000 non-null   bool   \n",
-      " 8   Weather_Rain             1000 non-null   bool   \n",
-      " 9   Weather_Snow             1000 non-null   bool   \n",
-      " 10  Trip_Price               1000 non-null   float64\n",
-      "dtypes: bool(5), float64(6)\n",
-      "memory usage: 51.9 KB\n"
+      " 0   Trip_Distance_km         1000 non-null   float64\n",
+      " 1   Passenger_Count          1000 non-null   float64\n",
+      " 2   Base_Fare                1000 non-null   float64\n",
+      " 3   Per_Km_Rate              1000 non-null   float64\n",
+      " 4   Per_Minute_Rate          1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes    1000 non-null   float64\n",
+      " 6   Time_of_Day_Afternoon    1000 non-null   bool   \n",
+      " 7   Time_of_Day_Evening      1000 non-null   bool   \n",
+      " 8   Day_of_Week_Weekday      1000 non-null   bool   \n",
+      " 9   Traffic_Conditions_High  1000 non-null   bool   \n",
+      " 10  Weather_Rain             1000 non-null   bool   \n",
+      " 11  Weather_Snow             1000 non-null   bool   \n",
+      " 12  Trip_Price               1000 non-null   float64\n",
+      "dtypes: bool(6), float64(7)\n",
+      "memory usage: 60.7 KB\n"
      ]
     }
    ],
@@ -477,11 +500,11 @@
     "df_cleaned = df_with_target.drop([\n",
     "    \"Time_of_Day_Night\",\n",
     "    \"Time_of_Day_Morning\",\n",
-    "    \"Time_of_Day_Evening\",\n",
+    "    #\"Time_of_Day_Evening\",\n",
     "    \"Day_of_Week_Weekend\",\n",
     "    \"Traffic_Conditions_Low\",\n",
     "    \"Weather_Clear\",\n",
-    "    \"Passenger_Count\",\n",
+    "    #\"Passenger_Count\",\n",
     "    \"Traffic_Conditions_Medium\"],\n",
     "    axis=\"columns\"\n",
     ")\n",
@@ -499,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
