--- a/explorations/missing_label.ipynb
+++ b/explorations/missing_label.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "66570d8d",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "ee51beed",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "94                  90.14         NaN  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "1b6f09bf",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "638489f6",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "20d196a9",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "9a89a86a",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "57530b5e",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "0238a46a",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "id": "bfd40ef3",
    "metadata": {},
    "outputs": [
@@ -326,21 +326,23 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 49 entries, 1 to 991\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 12 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
       " 0   Time_of_Day_Afternoon    49 non-null     bool   \n",
-      " 1   Day_of_Week_Weekday      49 non-null     bool   \n",
-      " 2   Traffic_Conditions_High  49 non-null     bool   \n",
-      " 3   Weather_Rain             49 non-null     bool   \n",
-      " 4   Weather_Snow             49 non-null     bool   \n",
-      " 5   Trip_Distance_km         49 non-null     float64\n",
-      " 6   Base_Fare                49 non-null     float64\n",
-      " 7   Per_Km_Rate              49 non-null     float64\n",
-      " 8   Per_Minute_Rate          49 non-null     float64\n",
-      " 9   Trip_Duration_Minutes    49 non-null     float64\n",
-      "dtypes: bool(5), float64(5)\n",
-      "memory usage: 2.5 KB\n"
+      " 1   Time_of_Day_Evening      49 non-null     bool   \n",
+      " 2   Day_of_Week_Weekday      49 non-null     bool   \n",
+      " 3   Traffic_Conditions_High  49 non-null     bool   \n",
+      " 4   Weather_Rain             49 non-null     bool   \n",
+      " 5   Weather_Snow             49 non-null     bool   \n",
+      " 6   Trip_Distance_km         49 non-null     float64\n",
+      " 7   Passenger_Count          49 non-null     float64\n",
+      " 8   Base_Fare                49 non-null     float64\n",
+      " 9   Per_Km_Rate              49 non-null     float64\n",
+      " 10  Per_Minute_Rate          49 non-null     float64\n",
+      " 11  Trip_Duration_Minutes    49 non-null     float64\n",
+      "dtypes: bool(6), float64(6)\n",
+      "memory usage: 3.0 KB\n"
      ]
     }
    ],
@@ -348,11 +350,11 @@
     "df_cleaned = df.drop([\n",
     "    \"Time_of_Day_Night\",\n",
     "    \"Time_of_Day_Morning\",\n",
-    "    \"Time_of_Day_Evening\",\n",
+    "    #\"Time_of_Day_Evening\",\n",
     "    \"Day_of_Week_Weekend\",\n",
     "    \"Traffic_Conditions_Low\",\n",
     "    \"Weather_Clear\",\n",
-    "    \"Passenger_Count\",\n",
+    "    #\"Passenger_Count\",\n",
     "    \"Traffic_Conditions_Medium\"],\n",
     "    axis=\"columns\"\n",
     ")\n",
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "9f0d7e6b",
    "metadata": {},
    "outputs": [],
